feat: endpoints da api com os reportes
